# keyinsight-rust

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  status_and_todo.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-demo.yml
demo/: .gitignore  index.html  package.json  vite.config.ts
demo/src/: main.ts
docs/: architecture.md  build-and-deploy.md  platform-substitutions.md  porting.md
keyinsight-core/: Cargo.toml
keyinsight-core/src/: lib.rs
keyinsight-core/src/audio/: metronome.rs  midi_file_encoder.rs  mod.rs  synth.rs  tests.rs  yin.rs
keyinsight-core/src/engine/: mod.rs
keyinsight-core/src/engine/session/: input.rs  lifecycle.rs  mod.rs  modes.rs  progress.rs  tests.rs
keyinsight-core/src/input/: mod.rs  simulated.rs  unplugged.rs
keyinsight-core/src/notation/: controller.rs  mod.rs  renderer.rs  vocabulary.rs  widget.rs
keyinsight-core/src/score/tests/: free_play_tests.rs  grand_staff_tests.rs  mod.rs  repertoire_tests.rs
keyinsight-core/src/ui/: app.rs  bottom_bar.rs  dynamic_label.rs  fonts.rs  info_rows.rs  keyboard_layout.rs  level_meter.rs  mod.rs  palette.rs  piano_strip.rs
keyinsight-core/src/ui/sheets/: calibration.rs  library.rs  mod.rs  player_dialogs.rs  progress.rs
keyinsight-core/src/ui/side_panel/: mod.rs  status.rs
keyinsight-core/tests/: file_line_count.rs
keyinsight-native/: Cargo.toml
keyinsight-native/src/: audio.rs  main.rs
keyinsight-wasm/: Cargo.toml
keyinsight-wasm/src/: audio.rs  lib.rs
