[package]
name = "keyinsight-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core training engine, score model, and user interface for the KeyInSight port."

[dependencies]
agg-gui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-time = { workspace = true }

[lib]
crate-type = ["rlib"]
