[package]
name = "keyinsight-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core training engine, score model, and user interface for the KeyInSight port."

[dependencies]
agg-gui = { workspace = true }
verovio-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
web-time = { workspace = true }
quick-xml = "0.36"
oxisynth = "0.1"

[lib]
crate-type = ["rlib"]
