[package]
name = "keyinsight-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly (wasm-bindgen) shell for the KeyInSight port."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
keyinsight-core = { path = "../keyinsight-core" }
agg-gui = { workspace = true }
demo-wgpu = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "console",
    # WebAudio output (metronome clicks + Hear It playback).
    "AudioContext",
    "AudioContextState",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AudioNode",
    "AudioParam",
] }
